
version 0.4.3 
Added more information the the pvproperties widgets. 
They now use a QTableWidget to show the extents 
used by each logical volume.

version 0.4.2
Fixed a bug that caused random crashes after 
mounting/unmounting and certain other operations.
The mirror corelog option of lvcreate should work
now. 

version 0.4.1
Still doing coding style unification and hunting
down smal bugs. Extending non-linear volumes should
work better now.

version 0.4.0
More additions for handling mirrors. The "properties"
widgets improved again and background colors made to
match. Many bug fixes.

version .3.3
Lots of bug fixes. Volume group information display
changed again, much nicer now.

version .3.1
Changes to the handling of mirrors, still not done.
Copyright notice debugged.
Many coding style improvements and bugs fixed.
Volume group information display changed but still
needs improvement.
  