@@ -28,7 +28,7 @@ class LVActionsMenu : public KMenu
 {
 Q_OBJECT
 
-    KAction *lv_remove_action, *lv_create_action, *pv_move_action,
+    KAction *lv_remove_action, *lv_create_action, *pv_move_action, *lv_rename_action,
 	    *lv_reduce_action, *lv_extend_action, *lv_change_action, *add_mirror_action, 
             *remove_mirror_action, *remove_mirror_leg_action, *snap_create_action,
             *mount_filesystem_action, *unmount_filesystem_action, *lv_mkfs_action;
